fix(advice): dark mode img show

--- a/web/src/components/Advice.module.css
+++ b/web/src/components/Advice.module.css
@@ -9,3 +9,10 @@
     flex-direction: column;
     align-items: flex-start;
 }
+
+.img {
+
+}
+.img_dark{
+    filter: invert(100%);
+}
